Trying to develop rental microservice
